[package]
name = "httpserv"
version = "0.1.0"
authors = ["Sergey Popov <sergei.popov174@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib  = "0.4.2"
curl = "0.4.25"
base64 = "0.11.0"
image = "0.22.3"
